tests/ui/std/mem/ManuallyDrop/ub.normal.stderr
error: invalid sequence of operations on `core::mem::ManuallyDrop`: `drop` and `drop`
  --> tests/ui/std/mem/ManuallyDrop/ub.rs:13:9
   |
LL |     let mut s = ManuallyDrop::new("1".to_owned());
   |                 --------------------------------- created here
LL |     unsafe {
LL |         ManuallyDrop::drop(&mut s);
   |         -------------------------- first call here
LL |
LL |         ManuallyDrop::drop(&mut s);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^ second call here
   |
   = help: See https://doc.rust-lang.org/std/mem/struct.ManuallyDrop.html#method.drop
   = note: `#[deny(rpl::bad_manually_drop_operation_sequence)]` on by default

error: invalid sequence of operations on `core::mem::ManuallyDrop`: `drop` and `drop`
  --> tests/ui/std/mem/ManuallyDrop/ub.rs:11:9
   |
LL |     let mut s = ManuallyDrop::new("1".to_owned());
   |                 --------------------------------- created here
LL |     unsafe {
LL |         ManuallyDrop::drop(&mut s);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^ second call here
LL |
LL |         ManuallyDrop::drop(&mut s);
   |         -------------------------- first call here
   |
   = help: See https://doc.rust-lang.org/std/mem/struct.ManuallyDrop.html#method.drop

error: invalid sequence of operations on `core::mem::ManuallyDrop`: `take` and `take`
  --> tests/ui/std/mem/ManuallyDrop/ub.rs:24:18
   |
LL |     let mut s = ManuallyDrop::new("1".to_owned());
   |                 --------------------------------- created here
LL |     unsafe {
LL |         let t1 = ManuallyDrop::take(&mut s);
   |                  -------------------------- first call here
LL |
LL |         let t2 = ManuallyDrop::take(&mut s);
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^ second call here
   |
   = help: See https://doc.rust-lang.org/std/mem/struct.ManuallyDrop.html#method.take

error: invalid sequence of operations on `core::mem::ManuallyDrop`: `take` and `take`
  --> tests/ui/std/mem/ManuallyDrop/ub.rs:22:18
   |
LL |     let mut s = ManuallyDrop::new("1".to_owned());
   |                 --------------------------------- created here
LL |     unsafe {
LL |         let t1 = ManuallyDrop::take(&mut s);
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^ second call here
LL |
LL |         let t2 = ManuallyDrop::take(&mut s);
   |                  -------------------------- first call here
   |
   = help: See https://doc.rust-lang.org/std/mem/struct.ManuallyDrop.html#method.take

error: invalid sequence of operations on `core::mem::ManuallyDrop`: `take` and `drop`
  --> tests/ui/std/mem/ManuallyDrop/ub.rs:35:9
   |
LL |     let mut s = ManuallyDrop::new("1".to_owned());
   |                 --------------------------------- created here
LL |     unsafe {
LL |         let t = ManuallyDrop::take(&mut s);
   |                 -------------------------- first call here
LL |
LL |         ManuallyDrop::drop(&mut s);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^ second call here
   |
   = help: See https://doc.rust-lang.org/std/mem/struct.ManuallyDrop.html#method.drop

error: invalid sequence of operations on `core::mem::ManuallyDrop`: `drop` and `take`
  --> tests/ui/std/mem/ManuallyDrop/ub.rs:33:17
   |
LL |     let mut s = ManuallyDrop::new("1".to_owned());
   |                 --------------------------------- created here
LL |     unsafe {
LL |         let t = ManuallyDrop::take(&mut s);
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^ second call here
LL |
LL |         ManuallyDrop::drop(&mut s);
   |         -------------------------- first call here
   |
   = help: See https://doc.rust-lang.org/std/mem/struct.ManuallyDrop.html#method.take

error: invalid sequence of operations on `core::mem::ManuallyDrop`: `take` and `drop`
  --> tests/ui/std/mem/ManuallyDrop/ub.rs:44:9
   |
LL |     let mut s = ManuallyDrop::new("1".to_owned());
   |                 --------------------------------- created here
LL |     unsafe {
LL |         ManuallyDrop::drop(&mut s);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^ second call here
LL |
LL |         let t = ManuallyDrop::take(&mut s);
   |                 -------------------------- first call here
   |
   = help: See https://doc.rust-lang.org/std/mem/struct.ManuallyDrop.html#method.drop

error: invalid sequence of operations on `core::mem::ManuallyDrop`: `drop` and `take`
  --> tests/ui/std/mem/ManuallyDrop/ub.rs:46:17
   |
LL |     let mut s = ManuallyDrop::new("1".to_owned());
   |                 --------------------------------- created here
LL |     unsafe {
LL |         ManuallyDrop::drop(&mut s);
   |         -------------------------- first call here
LL |
LL |         let t = ManuallyDrop::take(&mut s);
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^ second call here
   |
   = help: See https://doc.rust-lang.org/std/mem/struct.ManuallyDrop.html#method.take

error: invalid sequence of operations on `core::mem::ManuallyDrop`: `drop` and `into_inner`
  --> tests/ui/std/mem/ManuallyDrop/ub.rs:56:18
   |
LL |     let mut s = ManuallyDrop::new("1".to_owned());
   |                 --------------------------------- created here
LL |     unsafe {
LL |         ManuallyDrop::drop(&mut s);
   |         -------------------------- first call here
LL |         let t2 = ManuallyDrop::into_inner(s);
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^ second call here
   |
   = help: See https://doc.rust-lang.org/std/mem/struct.ManuallyDrop.html#method.into_inner

error: invalid sequence of operations on `core::mem::ManuallyDrop`: `take` and `into_inner`
  --> tests/ui/std/mem/ManuallyDrop/ub.rs:66:18
   |
LL |     let mut s = ManuallyDrop::new("1".to_owned());
   |                 --------------------------------- created here
LL |     unsafe {
LL |         let t1 = ManuallyDrop::take(&mut s);
   |                  -------------------------- first call here
LL |         let t2 = ManuallyDrop::into_inner(s);
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^ second call here
   |
   = help: See https://doc.rust-lang.org/std/mem/struct.ManuallyDrop.html#method.into_inner

error: aborting due to 10 previous errors

